@@ -76,6 +76,16 @@
                     <target>21</target>
                 </configuration>
             </plugin>
+            
+            <!-- Maven Surefire Plugin to run JUnit tests -->
+            <plugin>
+                <groupId>org.apache.maven.plugins</groupId>
+                <artifactId>maven-surefire-plugin</artifactId>
+                <configuration>
+                    <argLine>--add-opens java.base/java.lang=ALL-UNNAMED</argLine>
+                </configuration>
+            </plugin>
+
             <!-- Maven Jar Plugin to create a JAR file -->
             <plugin>
                 <groupId>org.apache.maven.plugins</groupId>
